--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="about-section">
         <div class="container">
             <div class="img-blog">
-                <img src="./assets/img/jay-sawyer-northbrook.jpg" alt="">
+                <img src="./assets/img/IMG_0758.jpg" alt="">
                 <div class="logobox">
                     <div class="logo">
                         <i class="fab fa-facebook-f"></i>
