--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                             <li><a href="#">contact me</a></li>
                         </ul>
                     <div class="head-logo">
-                        <p>ae.</p>
+                       <a href="#"> <p>ae.</p></a>
                     </div>
                     <div class="another-logo">
-                        <p>
+                        <a href="#"> <p>
                             hireme
-                        </p>
+                        </p></a>
                     </div>
                 </nav>
         </div>
@@ -37,7 +37,7 @@
                     </h2>
                     <a class="btn" href="">let's talk
                     </a>
-                    <u class="underline">my portfolio</u>
+                    <a href="#"><u class="underline">my portfolio</u></a>
                 </div>
                 <div class="about">
                     <h3 class="top">
@@ -66,16 +66,16 @@
                 <img src="./assets/img/IMG_0758.jpg" alt="">
                 <div class="logobox">
                     <div class="logo">
-                        <i class="fab fa-facebook-f"></i>
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
                     </div>
                     <div class="logo">
-                        <i class="fab fa-linkedin-in"></i>
+                       <a href="#"> <i class="fab fa-linkedin-in"></i></a>
                     </div>
                     <div class="logo">
-                        <i class="fab fa-twitter"></i>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
                     </div>
                     <div class="logo">
-                        <i class="fab fa-instagram-square"></i>
+                        <a href="#"><i class="fab fa-instagram-square"></i></a>
                     </div>
                 </div>
             </div>
@@ -133,16 +133,16 @@
                 </p>
                 <div class="address-logo">
                     <div class="logo-1">
-                        <i class="fab icon fa-facebook-f"></i>
+                        <a href="#"><i class="fab icon fa-facebook-f"></i></a>
                     </div>
                     <div class="logo-2">
-                        <i class="fab icon fa-linkedin-in"></i>
+                        <a href="#"><i class="fab icon fa-linkedin-in"></i></a>
                     </div>
                     <div class="logo-3">
-                        <i class="fab icon fa-twitter"></i>
+                        <a href="#"><i class="fab icon fa-twitter"></i></a>
                     </div>
                     <div class="logo-4">
-                        <i class="fab icon fa-instagram-square"></i>
+                        <a href="#"><i class="fab icon fa-instagram-square"></i></a>
                     </div>
                 </div>
                     
